--- a/FileNameTemplate.axaml
+++ b/FileNameTemplate.axaml
@@ -3,7 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:interfaces="clr-namespace:FileyCore.Interfaces;assembly=FileyCore"
-             x:Class="AFiley.FileDataTemplate"
+             x:Class="AFiley.FileNameTemplate"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450">
     <DataTemplate x:DataType="interfaces:IFileyItem" x:Key="File">
         <TextBlock>
