--- a/AFileyFilePicker.axaml
+++ b/AFileyFilePicker.axaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:controls="clr-namespace:AFiley"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="AFiley.AFiley">
+             x:Class="AFiley.AFileyFilePicker">
     <UserControl.Styles>
         <StyleInclude Source="avares://Avalonia.Controls.TreeDataGrid/Themes/Fluent.axaml"/>    
     </UserControl.Styles>
@@ -12,18 +12,24 @@
         <StackPanel
             DockPanel.Dock="Top"
             Orientation="Vertical">
-            <TextBox x:Name="CurrentPathBox"/>
+            <StackPanel Orientation="Horizontal">
+                <TextBox x:Name="CurrentPathBox"/>
+                <Button Content="Додати" 
+                        Click="AddToSelected"/>
+            </StackPanel>
+            
             <StackPanel Orientation="Horizontal">
                 <Button Content="Оновити"
-                        Click="Load"/>
+                        Click="LoadDrives"/>
                 <Button Content="Перейти"
-                        Click="Browse"/>
+                        Click="GoTo"/>
             </StackPanel>
         </StackPanel>
-        <Grid ColumnDefinitions="*,5,*">
+        <Grid ColumnDefinitions="*,5,*,5,*">
             <TreeDataGrid
                 Grid.Column="0"
                 x:Name="FileTree"
+                DoubleTapped="FileTree_OnDoubleTapped"
                 MinHeight="100"/>
             <GridSplitter Grid.Column="1" Width="5" ResizeDirection="Columns"/>
             <TreeDataGrid
@@ -31,7 +37,10 @@
                 x:Name="FileTable"
                 DoubleTapped="FileTable_OnDoubleTapped"
                 MinHeight="100"/>
+            <GridSplitter Grid.Column="3" Width="5" ResizeDirection="Columns"/>
+            <controls:SelectedFileList
+                x:Name="SelectedFileList"
+                Grid.Column="4"/>
         </Grid>
-        
     </DockPanel>
 </UserControl>
