--- a/FileSizeTemplate.axaml
+++ b/FileSizeTemplate.axaml
@@ -2,11 +2,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:interfaces="clr-namespace:FileyCore.Interfaces;assembly=FileyCore"
              xmlns:afiley="clr-namespace:AFiley"
              x:Class="AFiley.FileSizeTemplate"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450">
-    <DataTemplate x:DataType="interfaces:IFileyItem" x:Key="File">
-        <TextBlock Text="{Binding Size, Converter={x:Static afiley:Converters.SizeConverter}}"/>
+    <DataTemplate x:DataType="afiley:FileItem">
+        <TextBlock Text="{Binding FileInfo.Length, Converter={x:Static afiley:Converters.SizeConverter}}"/>
     </DataTemplate>
 </IDataTemplate>
