--- a/AFileyPickerBase.axaml
+++ b/AFileyPickerBase.axaml
@@ -4,19 +4,50 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:controls="clr-namespace:AFiley"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="AFiley.AFileyDirectoryPicker">
+             x:Class="AFiley.AFileyPickerBase">
     <UserControl.Styles>
-        <StyleInclude Source="avares://Avalonia.Controls.TreeDataGrid/Themes/Fluent.axaml"/>
+        <StyleInclude Source="avares://Avalonia.Controls.TreeDataGrid/Themes/Fluent.axaml"/>   
         <StyleInclude Source="/Styles/ButtonStyle.axaml"/>
         <StyleInclude Source="/Styles/TreeStyle.axaml"/>
     </UserControl.Styles>
+    <UserControl.DataTemplates>
+        <controls:FileNameTemplate>
+            <DataTemplate x:DataType="controls:FileItem">
+                <DockPanel>
+                    <TextBlock
+                        Margin="2"
+                        DockPanel.Dock="Left"
+                        VerticalAlignment="Center"
+                        Foreground="DodgerBlue"
+                        Classes="Ico File"/>
+                    <TextBlock
+                        VerticalAlignment="Center"
+                        Text="{Binding Name}"/>
+                </DockPanel>
+            </DataTemplate>
+            <DataTemplate x:DataType="controls:DirectoryItem">
+                <DockPanel>
+                    <TextBlock
+                        Margin="2"
+                        VerticalAlignment="Center"
+                        DockPanel.Dock="Left"
+                        Foreground="Lime"
+                        Classes="Ico Folder"/>
+                    <TextBlock
+                        VerticalAlignment="Center"
+                        Text="{Binding Name}"/>
+                </DockPanel>
+            </DataTemplate>
+        </controls:FileNameTemplate>
+    </UserControl.DataTemplates>
     <DockPanel>
         <StackPanel
             DockPanel.Dock="Top"
             Orientation="Vertical">
             <StackPanel Orientation="Horizontal">
-                <TextBox x:Name="CurrentPathBox"/>
-                <Button Classes="Ico Add"
+                <TextBox x:Name="CurrentPathBox"
+                         Text="{Binding $parent[controls:AFileyPickerBase].CurrentPath, Mode=TwoWay}"/>
+                <Button Classes="Ico Add" 
                         Click="AddToSelected"/>
             </StackPanel>
             
